logic fixes in client & additional trace output in status